--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -33,7 +33,7 @@ section#portfolio section {
   width: 100%;
   justify-content: space-between;
   position: absolute;
-  top: 35%;
+  top: 45%;
   transform: translateY(-50%);
 }
 
@@ -63,4 +63,20 @@ section#portfolio img {
 
 section#portfolio img.arrow {
   width: 15%;
+}
+
+@media screen and (min-width: 769px) {
+  section#portfolio section {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+    max-width: none;
+  }
+  form.main-form {
+    margin: 2rem 0;
+  }
+  .carousel__item,
+  .carousel__item--hidden {
+    display: block;
+  }
 }
