--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -70,7 +70,7 @@ img {
   #home button {
     height: 20%;
     grid-row: 3;
-    width: 50%;
+    width: auto;
     margin-left: 10%;
   }
   .hero-img {
