--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -12,6 +12,7 @@ section#portfolio section {
   overflow: hidden;
   max-width: 600px;
   position: relative;
+  margin: 0 auto;
 }
 .carousel__item,
 .carousel__item--hidden {
