--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -17,6 +17,7 @@ h2 {
   font-family: fonts.$roboto;
   font-size: 3.5rem;
   text-align: center;
+  margin-bottom: 2rem;
 }
 p {
   font-family: fonts.$roboto;
