--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -73,7 +73,7 @@ section#portfolio img.arrow {
     gap: 2rem;
     max-width: none;
   }
-  form.main-form {
+  section#portfolio form.main-form {
     margin: 2rem 0;
   }
   .carousel__item,
