--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -100,7 +100,7 @@ header.main-head {
       padding: 1rem;
     }
     .active {
-      background-color: yellow;
+      background-color: colours.$primary-colour;
     }
     .burger {
       display: none;
